--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header class="header">
       <div class="container">
+        <!-- Header Logo -->
         <h1><a href="#" class="brand">Brand</a></h1>
         <!-- Open Menu Icon -->
         <button type="button" class="opened-menu-btn">
